--- a/zukode/templates/base.html
+++ b/zukode/templates/base.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <body>
     <div class="page-header">
-        <h1>Zukode</h1>
+        <h1>Testing</h1>
     </div>
     <div class="content container">
         <div class="row">
