--- a/zukode/authentication/templates/auth/signin.html
+++ b/zukode/authentication/templates/auth/signin.html
@@ -8,7 +8,7 @@
           <h3 class="panel-title">Sign in</h3>
         </div>
         <div class="panel-body">
-          <form method="post" action=".">
+          <form method="post" action="/signin">
             {% csrf_token %}
             <div class="form-group">
               <label class="control-label" for="id_username">Username:</label>
@@ -25,4 +25,5 @@
       </div>
     </div>
   </div>
+
 {% endblock content %}
