update and insert

--- a/zukode/templates/base.html
+++ b/zukode/templates/base.html
@@ -1,4 +1,6 @@
 {% load staticfiles %}
+<!DOCTYPE html>
+<html>
 <body>
     <div class="content container">
         <div class="row">
@@ -9,3 +11,4 @@
         </div>
     </div>
 </body>
+</html>
