--- a/app/components/ContentBlock/style.css
+++ b/app/components/ContentBlock/style.css
@@ -1,6 +1,6 @@
 h2 {
     padding-bottom: 0.25em;
-    border-bottom: thin solid #666666;
+    /* border-bottom: thin solid #666666; */
     color: #000;
     font-size: 140%;
 }
