--- a/app/components/ContentEditable/style.css
+++ b/app/components/ContentEditable/style.css
@@ -1,5 +1,6 @@
 .txtarea {
-    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
     border: 1px solid #d9d9d9;
     box-sizing: border-box;
     border-radius: 4px;
